+ Added option to generate Apple file that allows Apple devices to use custom (embedded) fonts
+ Added code to store and load apple related settings
+ Added GUI to control Apple related settings
+ Added copyright notice text to "about" page
+ Added option to embed invisible license file (on by default when using converter)
* Fixed installer problem on x86 systems downloading VCRedist x86 twice
* The shell extension no longer looks for a converter path, as it's a COM object now
* Returned registration of shell extension for 32 bit programs on 64 bit machine that was broken in prev. version
* Moved conversion options configuration to different file defsetting.xml that will be located in user profile, if not exist will be copied there from program folder or created from defaults. This file will be used by all converters either command line , GUI or COM.
* When creating configuration from defaults it will not have font settings included
* Changed to use innosetup 5.5.3
* Doubled size of the single LOG file to reduce number of log files created
* Changed file extension generated by default to be lower case ".epub" in order to fix validation warning and to be more compatible
* Fixed some issues with localization
* Fixed a bug when book ID contained a characters not fit for CSS font family name and decoration enabled - resulted in CSS fonts (including Cyrillic) not being applied
* Fixed loading images with invalid content type values set as generated by some converters (e.g. Any2FB application/octet-stream etc.)
* Fixed problem with default settings file adding f.c. to the Author name
* Fixed the issue with improper filling the identifier in .ncx file (id and content got mixed up) - removes validation warning
* Fixed a namespace issue that prevented proper book sort on some systems
 * Fixed a FlatStructure option generating invalid files



1.1.3
+ Added settings.cmd file and shortcut to configure command line converter settings